--- a/Models/Aventador_SVJ.html
+++ b/Models/Aventador_SVJ.html
@@ -138,12 +138,12 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="img/svj/2.png" alt="" align="right" width="100%">
+      <img src="img/svj/dua.jpg" alt="" align="right" width="100%" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img src="img/svj/3.png" width="100%" align="left">
+      <img src="img/svj/3.jpg" width="104%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
@@ -166,12 +166,12 @@
     </div>
     <div class="col-md-6">
       <br><br><br><br>
-      <img src="img/svj/4.png" alt="" align="right" width="100%">
+      <img src="img/svj/4.jpg" alt="" align="right" width="100%" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img src="img/svj/5.png" alt="" align="left">
+      <img src="img/svj/5.jpeg" alt="" align="left" width="104%" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
