--- a/Models/Huracan_EVO.html
+++ b/Models/Huracan_EVO.html
@@ -137,12 +137,12 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="img/evo/2.png" alt="" align="right" width="100%">
+      <img src="img/evo/2.jpg" alt="" align="right" width="100%" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>  
   <div class="row">
     <div class="col-md-6">
-      <img src="img/evo/3.png" alt="" width="105%" align="left">
+      <img src="img/evo/3.jpg" alt="" width="104%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
@@ -167,12 +167,12 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="img/evo/4.png" width="105%" height="100%" align="right">
+      <img src="img/evo/4.jpg" width="104%" height="100%" align="right" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img src="img/evo/5.png" width="100%" align="left">
+      <img src="img/evo/5.jpg" width="100%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <br><br><h2><b>INTERIOR</b></h2>
