--- a/Models/Huracan_RWD.html
+++ b/Models/Huracan_RWD.html
@@ -143,14 +143,14 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="img/rwd/2.png" alt="" align="right" width="100%">
+      <img src="img/rwd/2.jpg" alt="" align="right" width="100%" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
 
 
   <div class="row">
     <div class="col-md-6">
-      <img src="img/rwd/3.png" alt="" width="105%" align="left">
+      <img src="img/rwd/3.jpg" alt="" width="104%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
@@ -181,12 +181,12 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="img/rwd/4.png" width="105%" align="right">
+      <img src="img/rwd/4.jpg" width="104%" align="right" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img src="img/rwd/5.png" width="100%" align="left">
+      <img src="img/rwd/5.jpg" width="100%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <br><br><h2><b>INTERIOR</b></h2>
@@ -205,7 +205,7 @@
     </p>
   </div>
 
-  <img src="img/rwd/6.png" alt="">
+  <img src="img/rwd/6.png" alt="" width="100%">
 
   <br><br>
 
