--- a/Motorsport/Motorsport.html
+++ b/Motorsport/Motorsport.html
@@ -142,25 +142,21 @@
     </div>
   </div>
   <!-- GT CUSTOMER RACING -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <div style="background-color: yellow; heig ">
-          <img src="img/3.png" width="107%">
-        </div>
-      </div>  
-      <div class="col-md-6">
-        <div style="background: none; height: 100px"></div>
-        <div class="motodiv">
-          <h2><b>GT</b> CUSTOMER RACING</h2>
-          <p>
-            Unlike the Super Trofeo, the GT3 is a category raced in championships open to different constructors. Automobili Lamborghini competes with over 20 customer teams who have chosen the Huracán GT3 EVO as their racing car. The Gran Turismo championships are held all over the world: from the IMSA WeatherTech SportsCar Championship in the US to the Asian championships SuperGT, Asian Le Mans Series and Blancpain GT World Challenge Asia, as well as the main European series, including the Blancpain GT World Challenge Europe, Adac GT Master, British GT Championship, Campionato Italiano GT and International GT Open.
-          </p>
-        </div>
+  <div class="row">
+    <div class="col-md-6">
+      <img src="img/3.png" width="104%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
+    </div>  
+    <div class="col-md-6">
+      <div style="background: none; height: 100px"></div>
+      <div class="motodiv">
+        <h2><b>GT</b> CUSTOMER RACING</h2>
+        <p>
+          Unlike the Super Trofeo, the GT3 is a category raced in championships open to different constructors. Automobili Lamborghini competes with over 20 customer teams who have chosen the Huracán GT3 EVO as their racing car. The Gran Turismo championships are held all over the world: from the IMSA WeatherTech SportsCar Championship in the US to the Asian championships SuperGT, Asian Le Mans Series and Blancpain GT World Challenge Asia, as well as the main European series, including the Blancpain GT World Challenge Europe, Adac GT Master, British GT Championship, Campionato Italiano GT and International GT Open.
+        </p>
       </div>
     </div>
   </div>
-  <img src="img/4.png" alt="">
+  <img src="img/4.png" alt="" width="100%">
   <!-- LAMBORGHINI ACCADEMIA -->
   <div class="container">
     <div class="row">
