--- a/Profil/Profil.html
+++ b/Profil/Profil.html
@@ -118,7 +118,7 @@
           <button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
           <!-- login -->
-          <button class="btn btn-outline-primary my-2 my-sm-0"><a href="..Login/index.php">Login</a></button>
+          <button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/index.php">Login</a></button>
       </form>
     </div>
   </nav>
@@ -126,9 +126,8 @@
   <section class="team">
       <div class="container">
           <div class="row">
-              <h4>TEAM(-AN) AJA</h4>
+              <h4>Gorosei Company</h4>
               <p> 
-                  BINGUNG AKU IKI MEH ISI OPO 
                   HTML is a computer language devised to allow website creation. These websites can then be viewed by anyone else connected to the Internet. It is relatively easy to learn, with the basics being accessible to most people in one sitting; and quite powerful in what it allows you to create. It is constantly undergoing revision and evolution to meet the demands and requirements of the growing Internet audience under the direction of the » W3C, the organisation charged with designing and maintaining the language.HTML is a computer language devised to allow website creation. These websites can then be viewed by anyone else connected to the Internet.
               </p>
           </div>
@@ -150,7 +149,7 @@
               </div>
                   <div class="column">
                   <div class="imgBox">
-                      <img src="17_11_1141.jpg">
+                      <img src="17_11_1128.png">
                   </div>
                   <div class="details">
                       <h4>SATRIA WIRANING<br><span>17.11.1128</span></h4>
@@ -165,7 +164,7 @@
               </div>
               <div class="column">
                   <div class="imgBox">
-                      <img src="17_11_1141.jpg">
+                      <img src="17_11_1167.jpg">
                   </div>
                   <div class="details">
                       <h4>HERMAWAN ADI N<br><span>17.11.1167</span></h4>
@@ -179,7 +178,7 @@
                   </div>
               </div>
               <div class="column"><div class="imgBox">
-                      <img src="17_11_1141.jpg">
+                      <img src="17_11_1156.jpeg">
                   </div>
                   <div class="details">
                       <h4>OKY NUR HIDAYAT<br><span>17.11.1156</span></h4>
@@ -192,10 +191,10 @@
                       </ul>
                   </div></div>
               <div class="column"><div class="imgBox">
-                      <img src="17_11_1141.jpg"class="gambar">
+                      <img src="17_11_1182.jpg"class="gambar">
                   </div>
                   <div class="details">
-                      <h4>  <br><span>17.11.1182</span></h4>
+                      <h4>BAGAS OCTA RIYO<br><span>17.11.1182</span></h4>
                       <ul>
                           <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                           <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -210,65 +209,6 @@
       </div>
   </section>
   <br><br>
-
-
-  <footer class="footer">
-    <div class="container bottom_border">
-      <div class="row">
-        <div class=" col-md-4">
-          <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
-          <ul class="footer_ul_amrc">
-            <li><a href="Models/Urus.html">Urus</a></li>
-            <li><a href="Models/Huracan_EVO.html">Huracan EVO</a></li>
-            <li><a href="Models/Huracan_RWD.html">Huracan RWD</a></li>
-            <li><a href="Models/Aventador_S.html">Aventador S</a></li>
-            <li><a href="Models/Aventador_SVJ.html">Aventador SVJ</a></li>
-          </ul>
-        </div>
-        <div class=" col-md-4">
-          <h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
-            <ul class="footer_ul_amrc">
-              <li><a href="Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
-              <li><a href="Brand/Marcello.html">Marcello Gandhini</a></li>
-              <li><a href="Brand/Giampaollo.html">Giampaollo Dallara</a></li>
-              <li><a href="Brand/Masterpieces.html">Masterpieces</a></li>
-              <li><a href="Brand/Design.html">Design</a></li>
-            </ul>
-        </div>
-        <div class=" col-md-4">
-          <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
-          <ul class="footer_ul_amrc">
-            <li><a href="Ownership/Dealer.html">Dealer Locator</a></li>
-            <li><a href="Ownership/Service.html">Service Locator</a></li>
-            <li><a href="Ownership/Center.html">Coullisin Center</a></li>
-            <li><a href="Ownership/Sparepart.html">Sparepart</a></li>
-            <li><a href="Ownership/Accessori.html">Accessori Originali</a></li>
-          </ul>
-        </div>  
-      </div>
-    </div>
-    <div class="container">
-      <ul class="foote_bottom_ul_amrc">
-      <li><a href="#">Models</a></li>
-      <li><a href="#">Brand</a></li>
-      <li><a href="#">Ownership</a></li>
-      <li><a href="#">Motorsport</a></li>
-      <li><a href="#">History</a></li>
-      </ul>
-      <p class="text-center">Copyright @2017 | Designed With by <a href="Profil/Profil.html">Fajar Company</a></p>
-    </div>
-  </footer>
-
-
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 
   <footer class="footer">
     <div class="container bottom_border">
@@ -316,6 +256,20 @@
       <p class="text-center">Copyright @2019 | Designed With by <a href="#">Gorosei Company</a></p>
     </div>
   </footer>
+
+
+  
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 
 
 </body>
