--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
       			<div class="carousel-item active">
 			        <img src="img/duaaa.png" class="d-block w-100" alt="...">
 			        <div class="carousel-caption d-none d-md-block">
-			          <h5>HURACAN EVO</h5>
-			          <p>Every day Amplified</p>
+			          <h2>HURACAN EVO</h2>
+			          <h4>Every day Amplified</h4>
 			        </div>
       			</div>
       		<!-- CARAUSEL 2 -->
       		<div class="carousel-item">
 		        <img src="img/satuu.png" class="d-block w-100" alt="...">
 		        <div class="carousel-caption d-none d-md-block">
-		          <h5>AVENTADOR SVJ</h5>
-		          <p>Real Emotins With The Futures</p>
+		          <h2>AVENTADOR SVJ</h2>
+		          <h4>Real Emotins With The Futures</h4>
 		        </div>
       		</div>
       		<!-- CARAUSEL 3 -->
