--- a/History/History.html
+++ b/History/History.html
@@ -117,10 +117,12 @@
 	    </form>
 	  </div>
 	</nav>	
-	
+
 	<div class="bg-image">
 	</div>
+
 		<div class="row berita ">
+			<br><br><br><br>
 			<div class="col-md-2 ">
 				<ul style="list-style: none;">
 					<li><a onclick="load1963()">1963-1964</a></li>
@@ -143,11 +145,11 @@
 			</div>
 			<div class="col-md-9">
 				<div class="row" >
-					<div class="col-md-6" style="background: green;">
-						<img id="foto" src="" alt="">
+					<div class="col-md-6">
+						<img id="foto" src="img/1963-1964/1.jpg" width="100%" style="margin-top: 15px;">
 					</div>
 					<div class="col-md-6 berita" id="demo">
-						<p style="overflow-y: scroll; height: 300px;">
+						<p style="overflow-y: scroll; height: 300px; margin-top: 15px;">
 							The history of ‘Lamborghini Automobili’ officially starts in 1963. Nevertheless, we must consider the far-off roots of this event, and they are the roots of Ferruccio Lamborghini. Born in 1916, this capable, impetuous, strong-willed Taurus was the leading character in the foundation of the company and the early phases of its extraordinary history.
 					</p>
 					</div>
