--- a/Models/Aventador_S.html
+++ b/Models/Aventador_S.html
@@ -122,7 +122,7 @@
     </div>
   </nav>
 
-  <img src="img/s/aventador_S.png" alt="">
+  <img src="img/s/aventador_S.png" width="100%">
 
   <div class="row" style="font-size: 16px">
     <div class="col-md-6">
@@ -136,12 +136,12 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="img/s/2.png" alt="" align="right" width="100%" height="100%">
+      <img src="img/s/2.jpg" alt="" align="right" width="100%" height="100%" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <img src="img/s/3.png" width="105%" align="left">
+      <img src="img/s/3.jpg" width="104%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
@@ -166,13 +166,13 @@
     </div>
     <div class="col-md-6">
       <br><br><br><br>
-      <img src="img/s/4.png" width="105%" align="right" width="100%">
+      <img src="img/s/4.jpg" width="104%" align="right" width="100%" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-6">
-      <img src="img/s/5.png" width="100%" align="left">
+      <img src="img/s/5.jpg" width="100%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
