--- a/Models/Urus.html
+++ b/Models/Urus.html
@@ -137,8 +137,6 @@
 	<div style="background-color: brown" class="kuning">
 		<img src="../img/urus/1.png" width="100%" height="100%">
 	</div>
-
-	<br>
 	<div class="row" style="font-size: 16px">
     <div class="col-md-6">
       <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
@@ -150,12 +148,12 @@
     </div>
     <div class="col-md-6">
     	<br>
-      <img src="../img/urus/2.png" alt="" align="right"style="position: static;">
+      <img src="../img/urus/2.jpg" width="100%" align="right" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
 	<div class="row">
     <div class="col-md-6">
-      <img src="../img/urus/3.png" alt="" align="left">
+      <img src="../img/urus/3.jpg" width="104%" align="left" style="clip-path: polygon(0% 0%, 100% 0%, 65% 100%, 0% 100%)">
     </div>
     <div class="col-md-6">
       <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
@@ -168,7 +166,7 @@
   </div>
 
 	<br>
-	<img src="../img/urus/7.png" alt="">	
+	<img src="../img/urus/7.png" width="100%">	
 	<br>
 
 	<div civ class="row">
@@ -181,7 +179,7 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="../img/urus/4.png" alt="" width="" align="right">
+      <img src="../img/urus/4.jpg" alt="" width="100%" align="right" style="clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 0% 100%)">
     </div>
   </div>
 
